[tool.poetry]
name = "antidetect"
version = "0.1.0"
description = ""
authors = ["Hoang Huu Manh <manh.hoanghuu@omsandbox.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.49.0"
chrome-fingerprints = "^1.1"
browserforge = "^1.1.2"
ttkbootstrap = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
